--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: lts/*
 
       - name: install pnpm
-        uses: pnpm/action-setup@main
+        uses: pnpm/action-setup@v4
         with:
           version: 9
 
@@ -66,7 +66,7 @@ jobs:
           node-version: lts/*
 
       - name: install pnpm
-        uses: pnpm/action-setup@main
+        uses: pnpm/action-setup@v4
         with:
           version: 9
 
